<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/search_page_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            app:menu="@menu/side_menu"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/enter_the_ingredients_you_have"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/searchbar"
                    android:backgroundTint="@color/yellow">

                    <EditText
                        android:id="@+id/ingredients"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="True"
                        android:background="@drawable/searchbar"
                        android:backgroundTint="@color/white"
                        android:hint="@string/e_g_banana"
                        android:inputType="textCapWords"
                        android:padding="10dp" />

                    <ImageView
                        android:id="@+id/addRecipe"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/searchbar"
                        android:contentDescription="@string/add_button"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:src="@drawable/ic_baseline_add_24" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlSymmetry">

                    <LinearLayout
                        android:id="@+id/RecipeList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <Button
                    android:id="@+id/find_recipe_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/yellow"
                    android:text="@string/search_recipe"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/indian_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/indian_ingredients"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/vegetable_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/vegetables"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/herbsSpices_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/herbs_amp_spices"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/beverages_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/beverages"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/desserts_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/desserts_amp_sweet_snacks"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/meat_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/meat_amp_poultry"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cheese_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/searchbar"
                            android:backgroundTint="@color/white"
                            android:padding="5dp"
                            android:text="@string/cheese"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>