<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipe_details">

    <ProgressBar
        android:id="@+id/main_loader_recipe_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitXY"
                android:src="@drawable/applogo" />

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:backgroundTint="@color/black"
                android:contentDescription="@string/recipe_image"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/watchOnYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/searchbar"
                android:backgroundTint="@color/youtube_white"
                android:drawableEnd="@drawable/youtube"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@string/watch_recipe_on"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/ingredientsRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ingredients_getting_used"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/used_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ingredients_not_getting_used"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/unused_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Unavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/unavailable_ingredients"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/missing_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/process"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recipe_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>